Image assets and HTML code for section 1 and section 2

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header">
+        <h2 class="logo">Header logo</h2>
+        <ul class="links">
+            <li><a href="#">Header link one</a></li>
+            <li><a href="#">Header link two</a></li>
+            <li><a href="#">Header link three</a></li>
+        </ul>
+    </div>
+    <div class="main">
+        <h1 class="title">This website is awesome</h1>
+        <p class="content">This website has some fantastic subtext that goes here and I am just typing so there is content here. Lorem ipsum!!!</p>
+        <button>Sign up</button>
+        <img src="images/placeholder.png">
+    </div>
+
     
 </body>
 </html>
