Section 2 HTML code

--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
         <button>Sign up</button>
         <img src="images/placeholder.png">
     </div>
+    <div class="section3">
+        <h2 class="title">Some random information</h2>
+        <ul class="boxes">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <ul class="boxtext">
+            <li>this is some text under an image or illustration</li>
+            <li>this is some text under an image or illustration</li>
+            <li>this is some text under an image or illustration</li>
+        </ul>
+    </div>
 
     
 </body>
