Section 4 HTML code

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
             <li>this is some text under an image or illustration</li>
         </ul>
     </div>
+    <div class="section4">
+        <p class="quote">
+            "This is an inspiring quote, or an inspiring testimonial from a customer. Maybe it's just filling space, or maybe people actually read it. Who knows?"
+        </p>
+        <p class="author">
+            -Thor, God of Thunder
+        </p>
+    </div>
 
     
 </body>
