--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
             -Thor, God of Thunder
         </p>
     </div>
+    <div class="section5">
+        <div class="banner">
+            <div class="title">Call to action! It's time!</div>
+            <p class="content">
+                Sign up for our product by clicking that button right over there!
+            </p>
+            <button>Sign up</button>
+        </div>
+    </div>
 
     
 </body>
