--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
             <button>Sign up</button>
         </div>
     </div>
-
+    <div class="footer">
+        Copyright The Odin Project 2022
+    </div>
     
 </body>
 </html>
