Restructured section 1 HTML and added its CSS

--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
                 <li><a href="#">Header link three</a></li>
             </ul>
         </div>
-        <h1 class="title">This website is awesome</h1>
-        <p class="content">This website has some fantastic subtext that goes here and I am just typing so there is content here. Lorem ipsum!!!</p>
-        <button>Sign up</button>
-        <img src="images/placeholder.png">
+        <div class="content">
+            <div class="text">
+                <h1 class="title">This website is awesome</h1>
+                <p class>This website has some fantastic subtext that goes here and I am just typing so there is content here. Lorem ipsum!!!</p>
+                <button>Sign up</button>
+            </div>
+            <img src="images/placeholder.png">
+        </div>
     </div>
     <div class="section2">
         <h2 class="title">Some random information</h2>
